fix(filter-drp): update spacing tokens and fix test

--- a/packages/components/src/FilterDateRangePicker/subcomponents/DateInputDescription/DateInputDescription.module.scss
+++ b/packages/components/src/FilterDateRangePicker/subcomponents/DateInputDescription/DateInputDescription.module.scss
@@ -5,6 +5,6 @@
 }
 
 .dateInputFormatContainer {
-  margin-inline-start: $spacing-xs;
+  margin-inline-start: $spacing-6;
   white-space: nowrap;
 }
