--- a/packages/components/src/FilterDateRangePicker/subcomponents/DateRangeDisplayLabel/DateRangeDisplayLabel.module.scss
+++ b/packages/components/src/FilterDateRangePicker/subcomponents/DateRangeDisplayLabel/DateRangeDisplayLabel.module.scss
@@ -2,5 +2,5 @@
 
 .dateRangeDisplayLabel {
   display: inline-flex;
-  gap: $spacing-xs;
+  gap: $spacing-6;
 }
